# dognut

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
doc/: dognut.xmind
model/Link/: Readme.txt  Thumbs.db
pb/: avpacket.proto  debugger.proto  display.proto  netpacket.proto
res/Link/: link_adult.mtl  new_link.mtl
res/cube/: cube.mtl
res/cube2/: cube.mtl
res/diablo/: diablo3_pose.mtl
res/extra/Creeper/: Creeper Charged.mtl  Creeper.mtl
res/mario_mini/: mario.mtl  mariomini.mtl
res/nice_cube/: nice_cube.mtl
res/plane/: plane.mtl
res/shaders/: light.wgsl  shader.wgsl  tui_shader.wgsl
res/strike_mario/: ReadMe.txt  mario.mtl
res/thumbs-up/: thumb.mtl
src/: lib.rs  main.rs
src/department/: mod.rs
src/department/common/: constant.rs  logger.rs  mod.rs  self_type.rs
src/department/control/: camera_controller.rs  mod.rs
src/department/model/: mod.rs  object_buffer.rs  object_loader.rs  render_object.rs  triangle.rs  triangle_resources.rs
src/department/net/: mod.rs  router.rs
src/department/pipeline/: mod.rs  rasterizer.rs  shader.rs
src/department/preview/: homo_transformation.rs  matrix.rs  matrix_builder.rs  mod.rs  object_buffer.rs  object_loader.rs  output_buffer.rs  position.rs  render_object.rs  state.rs  triangle.rs  vector.rs
src/department/rasterize_shade/: mod.rs
src/department/tui/: mod.rs  term.rs  tui_split.rs  tui_with_window.rs
src/department/types/: control.rs  mod.rs  msg.rs  multi_sender.rs
src/department/video/: decode.rs  encode.rs  mod.rs
src/department/view/: camera.rs  camera_trait.rs  local_window.rs  mod.rs  render.rs  window.rs
src/pb/: avpacket.rs  debugger.rs  display.rs  mod.rs  netpacket.rs
src/util/: mod.rs
src/wgpu/: camera.rs  instance.rs  light.rs  mod.rs  model.rs  old_camera.rs  resources.rs  texture.rs  wgpu_helper.rs
