[package]
name = "dognut"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25"

cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"

env_logger = "0.9"
log = "0.4"
winit = "0.27"
pixels = "*"
winit_input_helper = "0.13"
tobj = "3.2.3"
profiling = "1.0.7"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

