[package]
name = "dognut"
version = "0.0.1"
edition = "2021"
resolver = "2"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"

[[bin]]
name = "main"

[[bin]]
name = "test_pixels"

[[bin]]
name = "maybe_wgpu"

[[bin]]
name = "test_term"

[[bin]]
name = "test_camera_diff"

[dependencies]
#prost = "*"
tui = "0.*"
crossterm = "0.*"
tobj = {version = "3.*", features = ["async"]}
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"
env_logger = "0.9"
log = "0.4"
pixels = "*"
winit_input_helper = "0.13"
profiling = "1.0.7"
wgpu = "0.*"
winit = "0.27.5"
crossbeam-channel = {version = "0.5.*"} # for thread synchronize
clap = {version="4.*", features = ["derive"]}
protobuf = "3.2.0"
turbojpeg = {version="0.5.2", features=["image"], optional = true}

tokio = {version="1", features=["full"]}
dognut_macros = {path = "../dognut_macros"}

ffmpeg-next = {version="5.*", optional = true}

log4rs = "1.2.0"
lazy_static = "*"
json = "0.12.4"
cgmath = "0.18"

futures-intrusive = "0.4"
game-loop = {version = "0.10.1", features=["winit"]}

gilrs = "0.*"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

#[build-dependencies]
#prost-build = "*"

[features]
rtc = ["dep:ffmpeg-next"]
turbo = ["dep:turbojpeg"]
image_encoder = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
